--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@supabase/supabase-js": "^2.90.1",
     "lucide-react": "^0.562.0",
     "next": "14.2.35",
+    "pdfjs-dist": "^5.4.624",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "zod": "^4.3.5"
